--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@azure/storage-blob": "^12.10.0",
     "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "json2csv": "^5.0.7",
     "mongodb": "^4.7.0"
