--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "json2csv": "^5.0.7",
-    "mongodb": "^4.7.0"
+    "mongodb": "^4.7.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "dotenv": "^16.0.1",
