--- a/fluentd/fluent.conf
+++ b/fluentd/fluent.conf
@@ -6,10 +6,10 @@
 
 <match rewards>
     @type file
-    path /output/rewards.log
+    path /var/log/fluent/rewards
 </match>
 
 <match nginx>
     @type file
-    path /output/nginx.log
+    path /var/log/fluent/nginx
 </match>
