--- a/fluentd/fluent.conf
+++ b/fluentd/fluent.conf
@@ -6,10 +6,10 @@
 
 <match rewards>
     @type file
-    path /var/log/fluent/rewards/
+    path /output/rewards/
 </match>
 
 <match nginx>
     @type file
-    path /var/log/fluent/nginx/
+    path /output/nginx/
 </match>
