--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     logging:
       driver: "fluentd"
       options:
+        fluentd-address: localhost:24224
         fluentd-async-connect: "true"
         tag: nginx
 
@@ -37,6 +38,7 @@ services:
     logging:
       driver: "fluentd"
       options:
+        fluentd-address: localhost:24224
         fluentd-async-connect: "true"
         tag: rewards
 
