logs location change

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
     image: abhiramabhi/fluentd
     volumes:
       - ./fluentd/:/fluentd/etc:ro
-      - ./logs/:/fluentd/log/
+      - ./logs/:/output/
     ports:
       - "24224:24224"
       - "24224:24224/udp"
