--- a/fluentd/fluent.conf
+++ b/fluentd/fluent.conf
@@ -5,11 +5,21 @@
 </source>
 
 <match rewards>
-    @type file
-    path /fluentd/log/rewards/
+    @type copy
+    <store>
+      @type file
+      path /output/rewards/
+      compress gzip
+      formate json
+    </store>
 </match>
 
 <match nginx>
-    @type file
-    path /fluentd/log/nginx/
+    @type copy
+    <store>
+      @type file
+      path /output/nginx/
+      compress gzip
+      formate json
+    </store>
 </match>
