logs location change

--- a/fluentd/fluent.conf
+++ b/fluentd/fluent.conf
@@ -8,9 +8,9 @@
     @type copy
     <store>
       @type file
-      path /output/rewards/
+      path /output/rewards
       compress gzip
-      formate json
+      format json
     </store>
 </match>
 
@@ -18,8 +18,8 @@
     @type copy
     <store>
       @type file
-      path /output/nginx/
+      path /output/nginx
       compress gzip
-      formate json
+      format json
     </store>
 </match>
