logs collection to elasticsearch

--- a/fluentd/fluent.conf
+++ b/fluentd/fluent.conf
@@ -5,21 +5,17 @@
 </source>
 
 <match rewards>
-    @type copy
-    <store>
-      @type file
-      path /output/rewards
-      compress gzip
-      format json
-    </store>
+  @type elasticsearch
+  host elasticsearch
+  port 9300
+  index_name rewards
+  type_name logs
 </match>
 
 <match nginx>
-    @type copy
-    <store>
-      @type file
-      path /output/nginx
-      compress gzip
-      format json
-    </store>
+  @type elasticsearch
+  host elasticsearch
+  port 9300
+  index_name nginx
+  type_name logs
 </match>
