--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,17 @@
 version: "3"
 services:
 
-  nginx:
-    image: nginx:stable-alpine
-    ports:
-      - "3000:80"
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-    logging:
-      driver: "fluentd"
-      options:
-        fluentd-async-connect: "true"
-        tag: nginx
-
   rewards-calculator-app:
     image: abhiramabhi/radix-rewards-calculator
+    ports:
+      - "3000:3000"
     deploy:
-      replicas: 2
+      replicas: 1
       update_config:
         parallelism: 1
         delay: 15s
-      restart_policy:
-        condition: any
+      #restart_policy:
+       # condition: any
     environment:
       - NODE_ENV=production
     env_file:
@@ -34,10 +24,30 @@ services:
     command: npm start
 
   fluentd:
+    user: root
     image: abhiramabhi/fluentd
     volumes:
       - ./fluentd/:/fluentd/etc:ro
-      - ./logs/:/output/
     ports:
       - "24224:24224"
       - "24224:24224/udp"
+      
+  elasticsearch: # port 9200
+    image: elasticsearch:8.4.3
+    environment:
+    - node.name=elasticsearch
+    - cluster.initial_master_nodes=elasticsearch
+    - bootstrap.memory_lock=true
+    - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+
+  kibana:
+    image: kibana:7.9.1
+    ports:
+      - "5601:5601"
+    environment:
+      ELASTICSEARCH_URL: http://elasticsearch:9300
+      ELASTICSEARCH_HOSTS: http://elasticsearch:9300
