--- a/dockerfile-fluentd
+++ b/dockerfile-fluentd
@@ -1,3 +1,3 @@
-FROM fluent/fluentd:v0.12-debian
-RUN mkdir output
-RUN chown fluent:fluent /output
+FROM fluent/fluentd:v1.11-debian
+USER root
+RUN gem install fluent-plugin-elasticsearch
