--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,9 @@
 version: "3"
 services:
-  fluentd:
-    image: fluent/fluentd
-    volumes:
-      - ./fluentd/:/fluentd/etc:ro
-      - ./logs/:/output/
-    ports:
-      - "24224:24224"
-      - "24224:24224/udp"
-
-  nginx:
-    image: nginx:stable-alpine
-    ports:
-      - "3000:80"
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-    logging:
-      driver: "fluentd"
-      options:
-        fluentd-async-connect: "true"
-        tag: nginx
-
-  rewards-calculator-app:
+  app:
     image: abhiramabhi/radix-rewards-calculator
     deploy:
-      replicas: 1
+      replicas: 2
       update_config:
         parallelism: 1
         delay: 15s
@@ -32,11 +11,11 @@ services:
       - NODE_ENV=production
     env_file:
       - ./.env
-    logging:
-      driver: "fluentd"
-      options:
-        fluentd-async-connect: "true"
-        tag: rewards
-        
     command: npm start
+
+  nginx:
+    image: nginx:stable-alpine
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginxlogs/:/var/log/nginx/
 
