--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,7 +7,7 @@ server {
 
         proxy_set_header Host $http_host;
         proxy_set_header X-NginX-Proxy true;
-        proxy_pass http://rewards-calculator-app:3000;
+        proxy_pass http://app:3000;
         proxy_redirect off;
     }
 }
