--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: "3"
 services:
   app:
-    image: abhiramabhi/radix-rewards-calculator
+    build: 
+      context: .
     deploy:
       replicas: 2
       update_config:
@@ -20,4 +21,3 @@ services:
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
       - ./nginxlogs/:/var/log/nginx/
-
