--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3"
 services:
   app:
-    build: 
-      context: .
+    build: .
+    image: abhiramabhi/radix-rewards-calculator
     deploy:
       replicas: 2
       update_config:
