--- a/fluent-bit/fluent-bit.conf
+++ b/fluent-bit/fluent-bit.conf
@@ -13,8 +13,14 @@
     Buffer_Max_Size   6M
 
 [OUTPUT]
-    Name   stdout
-    Match  *
+    Name          pgsql
+    Match         *
+    Host          fluentbitDB
+    Port          5432
+    User          fluentbit
+    Password      fluentbit
+    Database      fluentbit
+    Table         logs
 
 [FILTER]
     Name  grep
