--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,9 +10,17 @@ server {
         proxy_pass http://app:3000;
         proxy_redirect off;
     }
-
     
-      location /log/ {
+    location /log/ {
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-NginX-Proxy true;
+        proxy_pass http://logger:4000/;
+        proxy_redirect off;
+    }
+
+    location /log {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
