--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@azure/storage-blob": "^12.10.0",
     "axios": "^0.27.2",
+    "axios-retry": "^3.4.0",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.7",
     "express": "^4.18.1",
     "json2csv": "^5.0.7",
     "mongodb": "^4.7.0",
