--- a/fluent-bit/fluent-bit.conf
+++ b/fluent-bit/fluent-bit.conf
@@ -13,17 +13,7 @@
     Buffer_Max_Size   6M
 
 [OUTPUT]
-    Name          pgsql
+    Name          file
     Match         *
-    Host          fluentbitDB
-    Port          5432
-    User          fluentbit
-    Password      fluentbit
-    Database      fluentbit
-    Table         logs
-
-[FILTER]
-    Name  grep
-    Match *
-
-
+    Path          /var/log/fluentd.log
+    
