--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,14 @@
 version: "3"
 services:
 
-  fluentbitDB:
-    image: postgres:12.9-alpine
-    ports:
-      - 5432:5432
-    environment:
-      POSTGRES_USER: fluentbit
-      POSTGRES_PASSWORD: fluentbit
-      POSTGRES_DB: fluentbit
-    volumes:
-      - ./sql-scripts:/docker-entrypoint-initdb.d/
-
   fluentbit:
-    image: fluent/fluent-bit:1.4.4
+    image: fluent/fluent-bit:2.2.2
     restart: always
     volumes:
       - ./fluent-bit/fluent-bit.conf:/fluent-bit/etc/fluent-bit.conf
+      - ./logs:/var/log/fluentd.log
     ports:
       - "24224:24224"
-
-  logger:
-    image: logger
-    # environment:
-    #   - DATABASE_URL=postgresql://fluentbit:fluentbit@fluentbitDB:5432/fluentbit
-    #   - ID="5f9f9c0b-9c9e-4b9f-8b9c-9e4b9f8b9c9e"
-    #   - PASSWORD="Z1U8IxdmLSOM55fASo89"
-    #   - JWT_SECRET_KEY="Z1U8IxdmLSOM55fASo89"
-    depends_on:
-      - fluentbitDB
-    env_file:
-      - ./.env
 
   app:
     build: .
@@ -56,8 +34,13 @@ services:
     image: nginx:stable-alpine
     depends_on:
       - app
+      - fluentbit
     ports:
       - "3000:3080"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
       - ./nginxlogs/:/var/log/nginx/
+    logging:
+      driver: "fluentd"
+      options:
+        tag: "nginx.stdout"
