fluentbit template added

--- a/fluent-bit/fluent-bit.conf
+++ b/fluent-bit/fluent-bit.conf
@@ -16,4 +16,5 @@
     Name          file
     Match         *
     Path          /var/log/fluentd.log
-    
+    Format        template
+    Template      {time} {container_id} {container_name} {source} {log}
